--- a/index.html
+++ b/index.html
@@ -5,30 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://thedeep.kr/index.html" />
-    <meta property="og:title" content="마케팅더딥" />
+    <meta property="og:url" content="https://예쁜중고폰.com" />
+    <meta property="og:title" content="예쁜중고폰" />
     <meta
       property="og:image"
-      content="https://thedeep.kr/src/img/ogimage.png"
+      content="https://예쁜중고폰.com/src/img/ogimage.png"
     />
     <meta
       property="og:description"
-      content="노출과 설득 모두 잡아 매출 상승을 실현하는 블로그 및 플레이스 상위노출 전문 온라인 마케팅 회사"
+      content="천안중고폰 매입/판매, 선불폰 개통 합리적인 곳 예쁜중고폰"
     />
     <meta property="og:site_name" content="thedeep" />
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta name="title" content="마케팅더딥" />
+    <meta name="title" content="천안중고폰 | 천안알뜰폰 | 천안선불폰" />
     <meta
       name="description"
-      content="노출과 설득 모두 잡아 매출 상승을 실현하는 블로그 및 플레이스 상위노출 전문 온라인 마케팅 회사"
+      content="진짜 최고가 매입, 최저가 판매를 실천하고 있는 천안 중고폰, 선불폰 개통 매장"
     />
     <meta
       name="keywords"
-      content="네이버, 브랜드 블로그, 스마트 플레이스, 상위노출, 건바이, 월보장, 기자단, 마케팅 강의, 컨설팅, 온라인 광고, 온라인 마케팅, "
+      content="천안, 중고폰, 매입, 판매, 매장, 알뜰폰, 선불폰, 아이폰, 갤럭시, 박스폰, 가개통, 자급제, "
     />
-    <title>마케팅더딥</title>
+    <title>천안중고폰 | 천안알뜰폰 | 천안선불폰</title>
     <link rel="stylesheet" href="/src/css/styles.css" />
     <link rel="stylesheet" href="/src/css/index.css" />
     <link rel="icon" href="/src/img/favicon.ico" type="image/x-icon" />
