--- a/index.html
+++ b/index.html
@@ -63,11 +63,10 @@
             letter-spacing: -0.5px;
           "
         >
-          <span style="color: #03c95b">노출</span>
-          <span style="font-weight: 100">X</span>
-          <span style="color: #03c95b">설득</span>
-          <span style="font-weight: 100">X</span> 품질
-          <span style="font-weight: 100">=</span> 매출
+          <span style="color: #f83aaa">최고가</span>
+          <span style="font-weight: 100">매입</span>
+          <span style="color: #f83aaa">최저가</span>
+          <span style="font-weight: 100">판매</span>
         </p>
         <p
           class="p52"
@@ -80,7 +79,7 @@
             letter-spacing: -0.5px;
           "
         >
-          광고가 아닌, <span style="font-weight: 100">마케팅</span>
+          예쁜중고폰, <span style="font-weight: 100">알뜰선불폰</span>
         </p>
       </div>
       <div style="position: absolute; bottom: 10px">
