--- a/index.html
+++ b/index.html
@@ -87,6 +87,56 @@
       </div>
     </section>
 
+
+
+ <section class="padding">
+      <div class="title-box container">
+        <p
+          class="p36"
+          style="
+            line-height: 21px;
+            letter-spacing: -0.5px;
+            font-weight: 600;
+            margin-bottom: 40px;
+          "
+        >
+          <span style="color: #f83aaa">예쁜중고폰</span> 서비스안내
+        </p>
+        <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
+          중고폰 매입, 판매, 선불폰 개통과 휴대폰 교체 서비스
+        </p>
+      </div>
+
+      <div id="reviews" class="container">
+        <div class="box">
+          <div class="image-container">
+            <img
+              src="/src/img/sec1/buy.png"
+              alt="sec 2-1"
+            />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image-container">
+            <img
+              src="/src/img/sec1/sell.png"
+              alt="sec 2-2"
+            />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image-container">
+            <img
+              src="/src/img/sec1/prepaid.png"
+              alt="sec 2-3"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    
+
     <section id="naver-photos" class="padding">
       <div class="title-box container">
         <p class="p36">
