--- a/index.html
+++ b/index.html
@@ -100,10 +100,11 @@
             margin-bottom: 40px;
           "
         >
-          <span style="color: #f83aaa">예쁜중고폰</span> 서비스안내
+          <span style="color: #f83aaa">예쁜중고폰</span>
+          <span style="color: #000000">서비스 안내</span>
         </p>
         <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
-          중고폰 매입, 판매, 선불폰 개통과 휴대폰 교체 서비스
+          <span style="color: #000000">중고폰 매입, 판매, 선불폰 개통과 휴대폰 교체 서비스</span>
         </p>
       </div>
 
