--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <span style="color: #000000">서비스 안내</span>
         </p>
         <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
-          <span style="color: #000000">중고폰 매입, 판매, 선불폰 개통과 휴대폰 교체 서비스</span>
+          <span style="color: #000000">중고폰 매입/판매, 알뜰(선불)개통, 휴대폰 교체</span>
         </p>
       </div>
 
