--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
     <section id="green-bg" class="padding">
       <div class="title-box container">
         <p class="p36">
-          <span style="color: white; font-weight: 600">저렴하지만 </span
-          ><span style="color: #fffc00; font-weight: 600">효과도 없는 업체</span
-          ><br /><span style="color: white; font-weight: 600">설마</span>
+          <span style="color: white; font-weight: 600">저렴하지만 </span>
+          <span style="color: #fffc00; font-weight: 600">효과도 없는 업체</span>
+          <br /><span style="color: white; font-weight: 600">설마</span>
           마케팅을 소비처럼 절약 하고 있나요?
         </p>
       </div>
@@ -392,7 +392,9 @@
           </p>
         </div>
         <div class="button">
-          <a class="p28" href="tel:0507-1496-0568">전화걸기</a>
+          <a class="p28" href="tel:0507-1496-0568">
+             <span style="color: #f83aaa;">전화걸기</span>
+                            </a>
         </div>
       </div>
     </section>
