--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="title" content="천안중고폰 | 천안알뜰폰 | 천안선불폰" />
     <meta
       name="description"
-      content="진짜 최고가 매입, 최저가 판매를 실천하고 있는 천안 중고폰, 선불폰 개통 매장"
+      content="진짜 최고가 매입, 최저가 판매를 실천하고 있는 천안 중고폰, 선불폰 개통 매장 예쁜중고폰"
     />
     <meta
       name="keywords"
