--- a/index.html
+++ b/index.html
@@ -392,9 +392,7 @@
           </p>
         </div>
         <div class="button">
-          <a class="p28" href="tel:0507-1496-0568">
-             <span style="color: #f83aaa;">전화걸기</span>
-                            </a>
+          <a class="p28" href="tel:0507-1496-0568">전화걸기</a>
         </div>
       </div>
     </section>
