--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
     <meta
       name="keywords"
-      content="천안중고폰, 천안, 중고폰, 매입, 판매, 매장, 알뜰폰, 선불폰, 아이폰, 갤럭시, 박스폰, 가개통, 자급제, "
+      content="천안중고폰, 천안, 중고폰, 매입, 판매, 매장, 알뜰폰, 선불폰, 아이폰, 수리, 갤럭시, 박스폰, 가개통, 자급제, "
     />
     <title>천안중고폰 | 천안알뜰폰 | 천안선불폰</title>
     <link rel="stylesheet" href="/src/css/styles.css" />
@@ -151,38 +151,7 @@
       </div>
 
       <div class="container">
-        <!-- Box 1 -->
-        <div class="box">
-          <img
-            src="/src/img/main/main_section_3_1.png"
-            alt="marketing thedeep section 3-1"
-            style="width: 100%"
-          />
-          <p
-            class="p28"
-            style="
-              margin-top: 40px;
-              text-align: center;
-              color: white;
-              font-weight: 500;
-              letter-spacing: -0.5px;
-            "
-          >
-            &lt;타 대행사&gt;
-          </p>
-          <p
-            class="p28"
-            style="
-              text-align: center;
-              margin: 0;
-              color: white;
-              font-weight: 300;
-              letter-spacing: -0.5px;
-            "
-          >
-            2개월 동안 20.22 → 23
-          </p>
-        </div>
+
 
         <!-- Box 2 -->
         <div class="box">
