--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 
         <!-- Box 2 -->
-        <div class="box">
+        <div>
           <img
             src="/src/img/main/main_section_3_2.png"
             alt="marketing thedeep section 3-2"
