--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
           </p>
         </div>
         <div class="button">
-          <a class="p28" href="tel:0507-1496-0568">전화걸기</a>
+          <a class="p28" href="tel:0507-1496-0568">☎ 0507-1496-0568</a>
         </div>
       </div>
     </section>
