--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </p>
       </div>
 
-      <div class="container-two" style="center">
+      <div class="container-two">
         <!-- Box 2 -->
         <div>
           <img
