--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
             src="/src/img/main/main_section_3_2.png"
             alt="marketing thedeep section 3-2"
             style="width: 60%"
+       margin: auto;
+       display: block;
+
+            
           />
           <p
             class="p28"
