--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
         <!-- Box 2 -->
         <div>
           <img
-            src="/src/img/main/main_section_3_2.png"
-            alt="marketing thedeep section 3-2"
+            src="/src/img/sec1/vs.png"
+            alt="예쁜중고폰과 타 천안중고폰 업체 비교"
             style="width: 95%"
        margin: auto;
        display: block;
