--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
    
 
-    <section id="green-bg" class="padding">
+    <section id="gray-bg" class="padding">
       <div class="title-box container">
         <p class="p36">
           <span style="color: white; font-weight: 600">저렴하지만 </span>
