--- a/index.html
+++ b/index.html
@@ -143,9 +143,8 @@
     <section id="gray-bg" class="padding">
       <div class="title-box container">
         <p class="p36">
-          <span style="color: white; font-weight: 600">저렴하지만 </span>
-          <span style="color: #fffc00; font-weight: 600">효과도 없는 업체</span>
-          <br /><span style="color: white; font-weight: 600">설마</span>
+          <span style="color: #f83aaa; font-weight: 600">예쁜중고폰이 단골이 많은 이유</span>
+          <br /><span style="color: white; font-weight: 600">고객님들의</span>
           마케팅을 소비처럼 절약 하고 있나요?
         </p>
       </div>
