--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
     <section id="gray-bg" class="padding">
       <div class="title-box container">
         <p class="p36">
-          <span style="color: #f83aaa; font-weight: 600">예쁜중고폰이 단골이 많은 이유</span>
-          <br /><span style="color: white; font-weight: 600">고객님들의</span>
-          마케팅을 소비처럼 절약 하고 있나요?
+          <span style="color: #000000; font-weight: 600">예쁜중고폰이 단골이 많은 이유</span>
+          <br />이미<span style="color: #f83aaa; font-weight: 600">많은 고객님들이</span>
+          헛걸음하셨다가 최종 선택하신 곳이에요
         </p>
       </div>
 
