--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <p class="p36">
           <span style="color: #000000; font-weight: 600">예쁜중고폰이 단골이 많은 이유</span>
           <br />이미<span style="color: #f83aaa; font-weight: 600">많은 고객님들이</span>
-          헛걸음하셨다가 최종 선택하신 곳이에요
+          헛걸음하셨다가 <br /> 최종 선택하신 곳이에요
         </p>
       </div>
 
