--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <div class="title-box container">
         <p class="p36">
           일반적인 광고대행사와<br /><span
-            style="color: #03c95b; font-weight: 600"
+            style="color: #f83aaa; font-weight: 600"
             >마케팅회사 더딥</span
           >은 비교 불가
         </p>
@@ -181,14 +181,16 @@
             <div class="list-top">
               <span class="p22 list-number">1</span>
               <p class="p28 list-title">
-                노출과 설득 2가지를 모두 잡아야하는 이유
+                미스터리 쇼퍼라고 들어보셨나요?
               </p>
             </div>
 
             <p class="p20 list-text">
-              많은 사람이 방문해도 설득하지 못하면 광고비만 낭비할 뿐입니다.<br />
-              반대로 아무리 좋은 글과 이미지를 담은 콘텐츠를 제작해서<br />
-              홍보한다고 해도 노출되지 않으면 설득할 기회가 없습니다.
+              일반인을 섭외하여 가격 및 친절도를 체크하는 일이에요.<br />
+              중고폰 2개를 쥐어주고 천안중고폰 업체 모든 곳을 방문시켰죠.<br />
+              주어진 업무는 매입가격과 인기 기종 판매가격을 체크하도록 했어요.<br />
+              딱 2곳이 가장 높은 가격 가격을 제시했고 무려 15만원까지 차이났어요.<br />
+              그 2개 업체 중 한곳은 예쁜중고폰이였고, 이 사실은 점장님도 모르게 진행했어요.
             </p>
           </div>
 
