--- a/index.html
+++ b/index.html
@@ -208,16 +208,16 @@
           <div class="list-box">
             <div class="list-top">
               <span class="p22 list-number">2</span>
-              <p class="p28 list-title">마케팅더딥은 계약기간이 없어요</p>
+              <p class="p28 list-title">전화나 톡톡으로 견적 비교하세요?</p>
             </div>
 
             <p class="p20 list-text">
-              광고회사는 6개월~1년의 계약을 요구하고 체결시 의무적인 행위만
-              반복합니다.<br />
+              많은 고객님들이 말씀하시는 내용을 계속 듣다보니까 알게된 내용인데요.<br />
+              방문을 유도하려고 전화 상담시 좋은 가격을 이야기하고 막상 방문하면 가격이 나빠져요.<br />
+              그 자리를 나와서 예쁜중고폰 매장에 온 손님의 말씀을 들어보면 가격 차이가 많이 나더라구요.<br />
+              물론 어쩔 수 없이 명백한 차감 항목들은 어쩔 수 없지만요.
 
-              마케팅회사 더딥은 효과없는 광고를 의뢰하실 경우 만류하고 있으며<br />
-
-              혹시나 진행한 광고의 효과 없는 경우를 대비해서 계약기간이 없어요.
+              
             </p>
           </div>
 
@@ -235,16 +235,15 @@
           <div class="list-box">
             <div class="list-top">
               <span class="p22 list-number">3</span>
-              <p class="p28 list-title">업종을 이해한 맞춤형 전략</p>
+              <p class="p28 list-title">그래도 비교 견적이 궁금하신가요?</p>
             </div>
 
             <p class="p22 list-text">
-              사업자의 지출, 월세, 마진율 등을 고려하여 마케팅 예산을
-              책정합니다.<br />
+              이미 다양한 정보를 드렸지만 못믿으시겠다면 비교해보시는 것을 추천드려요.<br />
 
-              그리고 업종의 규모와 브랜드의 아이덴티티를 이해하고<br />
+              단, 전화로는 소용없으니 꼭 직접 발품팔아서 비교해야 진짜 합리적인 천안 중고폰 매장을 찾을 수 있어요.<br />
 
-              그에 따른 최적의 광고를 제안하여 효율적인 전략을 구사합니다.
+              마지막으로 저희 매장에 방문하시고, 만약 최종 결정한 곳도 저희 매장이라면 상황을 알려주세요. 더 잘해드릴게요!
             </p>
           </div>
         </div>
