--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
     <section id="reasons" class="padding">
       <div class="title-box container">
         <p class="p36">
-          일반적인 광고대행사와<br /><span
+          천안 중고폰 매장 전부<br /><span
             style="color: #f83aaa; font-weight: 600"
-            >마케팅회사 더딥</span
-          >은 비교 불가
+            >직접 비교</span
+          >해보고 적었어요
         </p>
       </div>
       <div id="reasons_div">
