--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <section id="reasons" class="padding">
       <div class="title-box container">
         <p class="p36">
-          천안 중고폰 매장 전부<br /><span
+          천안 중고폰 매장<br /><span
             style="color: #f83aaa; font-weight: 600"
             >직접 비교</span
           >해보고 적었어요
