--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <section id="gray-bg" class="padding">
       <div class="title-box container">
         <p class="p36">
-          <span style="color: #000000; font-weight: 600">예쁜중고폰이 단골이 많은 이유</span><br />
+          <span style="color: #000000; font-weight: 600">예쁜중고폰이 단골이 많은 이유</span><br /><br />
         <span style="color: #000000;">이미 </span><span style="color: #f83aaa; font-weight: 600">많은 고객님들이</span>
          <span style="color: #000000;"> 헛걸음하셨다가 <br /> 최종 선택하신 곳이에요</span>
         </p>
@@ -239,7 +239,7 @@
             </div>
 
             <p class="p22 list-text">
-              이미 다양한 정보를 드렸지만 못믿으시겠다면 비교해보시는 것을 추천드려요.<br />
+              이미 다양한 정보를 드렸지만 못믿으시겠다면 직접 비교해보시는 것을 추천드려요.<br />
 
               단, 전화로는 소용없으니 꼭 직접 발품팔아서 비교해야 진짜 합리적인 천안 중고폰 매장을 찾을 수 있어요.<br />
 
