--- a/index.html
+++ b/index.html
@@ -250,73 +250,68 @@
       </div>
     </section>
 
-    <section id="services" class="padding">
+
+   <section id="naver-photos" class="padding">
       <div class="title-box container">
         <p
-          class="p28"
-          style="font-weight: 500; margin-bottom: 10px; letter-spacing: -0.5px"
-        >
-          온라인 바이럴 마케팅<br />
-        </p>
-        <p
           class="p36"
-          style="color: #03c95b; font-weight: 600; letter-spacing: -0.5px"
+          style="
+            line-height: 21px;
+            letter-spacing: -0.5px;
+            font-weight: 600;
+            margin-bottom: 40px;
+          "
         >
-          어떤 서비스가 필요하세요?
+          <span style="color: #f83aaa">예쁜중고폰</span>
+          <span style="color: #000000">매장 인테리어</span>
+        </p>
+        <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
+          <span style="color: #000000">오시는 길, 주차장도 확인하세요.</span>
         </p>
       </div>
 
       <div class="container">
         <!-- Box 1 -->
-        <div
-          class="box"
-          style="background-image: url(/src/img/main/main_section_5_1.png)"
-        >
-          <div class="image-container">
-            <div class="text-overlay">
-              <p class="p36">블로그 마케팅</p>
-              <div class="list">
-                <p class="p22">-브랜드 블로그</p>
-                <p class="p22">-프리미엄 기자단</p>
-                <p class="p22">-키워드 상위노출</p>
-                <p class="p22">-최적화 페이지</p>
-              </div>
-              <p class="p20 button-link">
-                <a
-                  href="/src/pages/blog_deep_page.html"
-                  style="text-decoration: none; color: black"
-                  >자세히 알아보기 →</a
-                >
-              </p>
-            </div>
-          </div>
+        <div class="box">
+          <img
+            src="/src/img/main/main_section_2_1.png"
+            alt="marketing thedeep section 2-1"
+            style="width: 100%"
+          />
         </div>
 
         <!-- Box 2 -->
-        <div
-          class="box"
-          style="background-image: url(/src/img/main/main_section_5_2.png)"
-        >
-          <div class="image-container">
-            <div class="text-overlay">
-              <p class="p36">플레이스 마케팅</p>
-              <div class="list">
-                <p class="p22">-세팅 및 등록하기</p>
-                <p class="p22">-최적화 (SEO)</p>
-                <p class="p22">-순위 상승</p>
-              </div>
-              <p class="p20 button-link">
-                <a
-                  href="/src/pages/place_seo_page.html"
-                  style="text-decoration: none; color: black"
-                  >자세히 알아보기 →</a
-                >
-              </p>
-            </div>
-          </div>
+        <div class="box">
+          <img
+            src="/src/img/main/main_section_2_2.png"
+            alt="marketing thedeep section 2-2"
+            style="width: 100%"
+          />
+        </div>
+
+        <!-- Box 3 -->
+        <div class="box">
+          <img
+            src="/src/img/main/main_section_2_3.png"
+            alt="marketing thedeep section 2-3"
+            style="width: 100%"
+          />
+        </div>
+
+        <!-- Box 4 -->
+        <div class="box">
+          <img
+            src="/src/img/main/main_section_2_4.png"
+            alt="marketing thedeep section 2-4"
+            style="width: 100%"
+          />
         </div>
       </div>
     </section>
+
+
+
+    
 
     <section id="main_footer">
       <div id="main_footer_div" class="padding">
