--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
         <!-- Box 1 -->
         <div class="box">
           <img
-            src="/src/img/main/main_section_2_1.png"
-            alt="marketing thedeep section 2-1"
+            src="/src/img/sec1/pic1.png"
+            alt="예쁜중고폰 판매 상품 진열 쇼케이스"
             style="width: 100%"
           />
         </div>
@@ -283,8 +283,8 @@
         <!-- Box 2 -->
         <div class="box">
           <img
-            src="/src/img/main/main_section_2_2.png"
-            alt="marketing thedeep section 2-2"
+            src="/src/img/sec1/pic2.png"
+            alt="예쁜중고폰 내부 인테리어"
             style="width: 100%"
           />
         </div>
@@ -292,8 +292,8 @@
         <!-- Box 3 -->
         <div class="box">
           <img
-            src="/src/img/main/main_section_2_3.png"
-            alt="marketing thedeep section 2-3"
+            src="/src/img/sec1/pic3.png"
+            alt="주차장 입구"
             style="width: 100%"
           />
         </div>
@@ -301,8 +301,8 @@
         <!-- Box 4 -->
         <div class="box">
           <img
-            src="/src/img/main/main_section_2_4.png"
-            alt="marketing thedeep section 2-4"
+            src="/src/img/sec1/pic4.png"
+            alt="넓은 주차장 모습"
             style="width: 100%"
           />
         </div>
