--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       property="og:description"
       content="천안중고폰 매입/판매, 선불폰 개통 합리적인 곳 예쁜중고폰"
     />
-    <meta property="og:site_name" content="thedeep" />
+    <meta property="og:site_name" content="예쁜중고폰" />
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
