--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     />
     <meta
       property="og:description"
-      content="천안중고폰 매입/판매, 선불폰 개통 합리적인 곳 예쁜중고폰"
+      content="천안중고폰 최고가 매입, 최저가 판매, 선불폰, 알뜰폰, 예쁜중고폰"
     />
     <meta property="og:site_name" content="예쁜중고폰" />
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta name="title" content="천안중고폰 | 천안알뜰폰 | 천안선불폰" />
+    <meta name="title" content="천안중고폰 | 예쁜중고폰" />
     <meta
       name="description"
-      content="진짜 최고가 매입, 최저가 판매를 실천하고 있는 천안 중고폰, 알뜰 선불폰 개통 매장 예쁜중고폰"
+      content="천안중고폰 최고가 매입, 최저가 판매, 선불폰, 알뜰폰, 예쁜중고폰"
     />
     <meta
       name="keywords"
       content="천안중고폰, 천안, 중고폰, 매입, 판매, 매장, 알뜰폰, 선불폰, 아이폰, 수리, 갤럭시, 박스폰, 가개통, 자급제, "
     />
-    <title>천안중고폰 | 천안알뜰폰 | 천안선불폰</title>
+    <title>천안중고폰 | 예쁜중고폰</title>
     <link rel="stylesheet" href="/src/css/styles.css" />
     <link rel="stylesheet" href="/src/css/index.css" />
     <link rel="icon" href="/src/img/favicon.ico" type="image/x-icon" />
