--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
 
             <p class="p22 list-text">
               일반인을 섭외하여 가격 및 친절도를 체크하는 일이에요.<br />
-              중고폰 2개를 쥐어주고 천안중고폰 업체 모든 곳을 방문시켰죠.<br />
+              중고폰 2개를 쥐어주고 천안중고폰 업체 모든 곳을 방문하도록 했죠.<br /><br />
               주어진 업무는 매입가격과 인기 기종 판매가격을 체크하도록 했어요.<br />
-              딱 2곳이 가장 높은 가격 가격을 제시했고 무려 15만원까지 차이났어요.<br />
+              딱 2곳이 가장 높은 가격 가격을 제시했고 무려 15만원까지 차이났어요.<br /><br />
               그 2개 업체 중 한곳은 예쁜중고폰이였고, 이 사실은 점장님도 모르게 진행했어요.
             </p>
           </div>
@@ -213,7 +213,7 @@
 
             <p class="p22 list-text">
               많은 고객님들이 말씀하시는 내용을 계속 듣다보니까 알게된 내용인데요.<br />
-              방문을 유도하려고 전화 상담시 좋은 가격을 이야기하고 막상 방문하면 가격이 나빠져요.<br />
+              방문을 유도하려고 전화 상담시 좋은 가격을 이야기하고 막상 방문하면 가격이 나빠져요.<br /><br />
               그 자리를 나와서 예쁜중고폰 매장에 온 손님의 말씀을 들어보면 가격 차이가 많이 나더라구요.<br />
               물론 어쩔 수 없이 명백한 차감 항목들은 어쩔 수 없지만요.
 
@@ -241,7 +241,7 @@
             <p class="p22 list-text">
               이미 다양한 정보를 드렸지만 못믿으시겠다면 직접 비교해보시는 것을 추천드려요.<br />
 
-              단, 전화로는 소용없으니 꼭 직접 발품팔아서 비교해야 진짜 합리적인 천안 중고폰 매장을 찾을 수 있어요.<br />
+              단, 전화로는 소용없으니 꼭 직접 발품팔아서 비교해야 진짜 합리적인 업체를 찾을 수 있어요.<br /><br />
 
               마지막으로 저희 매장에 방문하시고, 만약 최종 결정한 곳도 저희 매장이라면 상황을 알려주세요. 더 잘해드릴게요!
             </p>
