--- a/index.html
+++ b/index.html
@@ -190,14 +190,14 @@
               중고폰 2개를 쥐어주고 천안중고폰 업체 모든 곳을 방문하도록 했죠.<br /><br />
               주어진 업무는 매입가격과 인기 기종 판매가격을 체크하도록 했어요.<br />
               딱 2곳이 가장 높은 가격 가격을 제시했고 무려 15만원까지 차이났어요.<br /><br />
-              그 2개 업체 중 한곳은 예쁜중고폰이였고, 이 사실은 점장님도 모르게 진행했어요.
+              그 2개 업체 중 한곳은 예쁜중고폰이였고, 이 사실은 점장님도 모르게 진행했어요.<br /><br />
             </p>
           </div>
 
           <div
             style="
               z-index: 1;
-              top: 50;
+              top: 0;
               margin-left: 8%;
               width: 85%;
               height: 1px;
@@ -215,7 +215,7 @@
               많은 고객님들이 말씀하시는 내용을 계속 듣다보니까 알게된 내용인데요.<br />
               방문을 유도하려고 전화 상담시 좋은 가격을 이야기하고 막상 방문하면 가격이 나빠져요.<br /><br />
               그 자리를 나와서 예쁜중고폰 매장에 온 손님의 말씀을 들어보면 가격 차이가 많이 나더라구요.<br />
-              물론 어쩔 수 없이 명백한 차감 항목들은 어쩔 수 없지만요.
+              물론 어쩔 수 없이 명백한 차감 항목들은 어쩔 수 없지만요.<br /><br />
 
               
             </p>
