--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <section id="gray-bg" class="padding">
       <div class="title-box container">
         <p class="p36">
-          <span style="color: #000000; font-weight: 600">예쁜중고폰이 단골이 많은 이유</span><br /><br />
+          <span style="color: #000000; font-weight: 600">예쁜중고폰에 단골이 많은 이유</span><br /><br />
         <span style="color: #000000;">이미 </span><span style="color: #f83aaa; font-weight: 600">많은 고객님들이</span>
          <span style="color: #000000;"> 헛걸음 후 <br /> 최종 선택하신 곳이에요</span>
         </p>
