--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               일반인을 섭외하여 가격 및 친절도를 체크하는 일이에요.<br />
               중고폰 2개를 쥐어주고 천안중고폰 업체 모든 곳을 방문하도록 했죠.<br /><br />
               주어진 업무는 매입가격과 인기 기종 판매가격을 체크하도록 했어요.<br />
-              딱 2곳이 가장 높은 가격 가격을 제시했고 무려 15만원까지 차이났어요.<br /><br />
+              딱 2곳이 가장 높은 가격을 제시했고 무려 15만원까지 차이났어요.<br /><br />
               그 2개 업체 중 한곳은 예쁜중고폰이였고, 이 사실은 점장님도 모르게 진행했어요.<br /><br />
             </p>
           </div>
