--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <!-- Box 2 -->
         <div>
           <img
-            src="/src/img/sec1/vs.png"
+            src="/src/img/sec1/vsto.png"
             alt="예쁜중고폰과 타 천안중고폰 업체 비교"
             style="width: 95%"
        margin: auto;
@@ -181,7 +181,7 @@
             <div class="list-top">
               <span class="p22 list-number">1</span>
               <p class="p28 list-title">
-                미스터리 쇼퍼라고 들어보셨나요?
+                미스터리 쇼퍼를 아시나요?
               </p>
             </div>
 
