--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -7,31 +7,31 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://thedeep.kr/src/pages/blog_deep_page.html"
+      content="https://예쁜중고폰.com/src/pages/buy.html"
     />
-    <meta property="og:title" content="딥블단 - 마케팅더딥" />
+    <meta property="og:title" content="중고폰 매입-예쁜중고폰" />
     <meta
       property="og:image"
-      content="https://thedeep.kr/src/img/ogimage.png"
+      content="https://예쁜중고폰.com/src/img/ogimage.png"
     />
     <meta
       property="og:description"
-      content="블로그 상위노출 및 검색량을 늘려 인지도 및 신뢰도 상승하는 프리미엄 기자단 서비스 딥블단"
+      content="천안중고폰매입, 최고가 보장, 불필요한 차감 없이 명확한 안내 "
     />
-    <meta property="og:site_name" content="thedeep" />
+    <meta property="og:site_name" content="예쁜중고폰" />
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta name="title" content="딥블단 - 마케팅더딥" />
+    <meta name="title" content="중고폰 매입 - 예쁜중고폰" />
     <meta
       name="description"
-      content="블로그 상위노출 및 검색량을 늘려 인지도 및 신뢰도 상승하는 프리미엄 기자단 서비스 딥블단"
+      content="천안중고폰매입, 최고가 보장, 불필요한 차감 없이 명확한 안내"
     />
     <meta
       name="keywords"
-      content="네이버, 블로그, 상위노출, 배포, 스마트블록, 인기글, 인기주제, 블로그탭 "
+      content="천안,중고폰,매입,최고가,예쁜중고폰 "
     />
-    <title>딥블단 - 마케팅더딥</title>
+    <title>중고폰 매입 - 예쁜중고폰</title>
     <link rel="stylesheet" href="/src/css/styles.css" />
 
     <link rel="icon" href="/src/img/favicon.ico" type="image/x-icon" />
@@ -40,14 +40,6 @@
       rel="stylesheet"
     />
     <script src="/src/js/jquery.min.js"></script>
-
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-K2TR9PFH');</script>
-<!-- End Google Tag Manager -->
 
     
   </head>
