--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -63,254 +63,15 @@
           padding-bottom: 2px;
         "
       >
-        딥블단
+        중고폰 매입
       </p>
     </section>
 
-    <section id="tabs">
-      <a
-        style="text-decoration: none; width: 50%"
-        href="/src/pages/blog_deep_page.html"
-      >
-        <div
-          style="
-            font-size: 22px;
-            padding: 20px;
-            border: 1px solid #dfdfdf;
-            color: #03c95b;
-            font-weight: 600;
-          "
-        >
-          딥블단
-        </div></a
-      >
-      <a
-        style="text-decoration: none; color: black; width: 50%"
-        href="/src/pages/blog_brand_page.html"
-        ><div
-          style="
-            font-size: 22px;
-            padding: 20px;
-            border-top: 1px solid #dfdfdf;
-            border-right: 1px solid #dfdfdf;
-            border-bottom: 1px solid #dfdfdf;
-            background-color: #dfdfdf;
-          "
-        >
-          브랜드 블로그
-        </div></a
-      >
-    </section>
 
-    <section class="padding">
-      <div class="title-box container">
-        <p
-          class="p36"
-          style="
-            line-height: 21px;
-            letter-spacing: -0.5px;
-            font-weight: 600;
-            margin-bottom: 40px;
-          "
-        >
-          <span
-            style="
-              color: white;
-              background-color: #03c95b;
-              padding: 6px 6px 2px 6px;
-              font-weight: 800;
-            "
-            >딥블단</span
-          >이란?
-        </p>
-        <p
-          class="p22"
-          style="letter-spacing: -0.5px; font-weight: 500; margin-bottom: 40px"
-        >
-          상위노출이 잘되는 최적화 / 인플루언서 블로그에<br />원하시는 글의
-          내용으로 포스팅해드려요.
-        </p>
-        <p class="p22" style="letter-spacing: -0.5px; font-weight: 600">
-          이런분들에게 추천해드려요!
-        </p>
-      </div>
 
-      <div class="container">
-        <div class="radius-text p20">
-          <img src="/src/img/deep/checkbox.png" alt="checkbox1" />
-          <p>특정 키워드를 장악해서 홍보효과를 누리고 싶으신 분</p>
-        </div>
-        <div class="radius-text p20">
-          <img src="/src/img/deep/checkbox.png" alt="checkbox1" />
-          <p>새로운 이벤트 및 프로모션 알리고 싶으신 분</p>
-        </div>
-        <div class="radius-text p20">
-          <img src="/src/img/deep/checkbox.png" alt="checkbox1" />
-          <p>블로그가 성장할 때까지 경쟁이 심한 키워드에 노출되길 바라는 분</p>
-        </div>
-        <div class="radius-text p20">
-          <img src="/src/img/deep/checkbox.png" alt="checkbox1" />
-          <p>상호명 검색시 노출되는 검색 결과의 양을 늘려서 신뢰도 상승</p>
-        </div>
-      </div>
-    </section>
 
-    <section class="padding" style="background-color: #ededed">
-      <div class="title-box container">
-        <p
-          class="p36"
-          style="
-            line-height: 21px;
-            letter-spacing: -0.5px;
-            font-weight: 600;
-            margin-bottom: 40px;
-          "
-        >
-          <span style="color: #03c95b">3가지 방식</span>이 있어요!
-        </p>
-        <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
-          경쟁이 심한 키워드도 대부분 가능해요.<br /><span
-            style="text-decoration: underline"
-            >실패시 100% 환불!</span
-          >
-        </p>
-      </div>
 
-      <div class="container">
-        <div class="container-box">
-          <div class="container-box-inner p36">기본</div>
-          <p class="p20">원하는 등급의 블로그를<br />지정해서 포스팅해요.</p>
-        </div>
-
-        <div class="container-box">
-          <div class="container-box-inner p36">1회 보장</div>
-          <p class="p20">
-            지정한 키워드와 영역에<br />
-            <span style="color: #03c95b">24시간 노출 보장</span>
-          </p>
-        </div>
-
-        <div class="container-box">
-          <div class="container-box-inner p36">월간 보장</div>
-          <p class="p20">
-            지정한 키워드와 영역에<br />
-            <span style="color: #03c95b">월 25일간 노출 보장</span>
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <section class="padding">
-      <div class="title-box container">
-        <p
-          class="p36"
-          style="
-            line-height: 21px;
-            letter-spacing: -0.5px;
-            font-weight: 600;
-            margin-bottom: 40px;
-          "
-        >
-          어디에 <span style="color: #03c95b">노출</span>되나요?
-        </p>
-        <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
-          블로그탭, 인기글, 스마트블록(인기주제), 지식인
-        </p>
-      </div>
-
-      <div class="container">
-        <!-- Box 1 -->
-        <div class="box">
-          <img
-            src="/src/img/deep/blog.png"
-            alt="marketing thedeep section 2-1"
-            style="width: 100%"
-          />
-        </div>
-
-        <!-- Box 2 -->
-        <div class="box">
-          <img
-            src="/src/img/deep/popular.png"
-            alt="marketing thedeep section 2-2"
-            style="width: 100%"
-          />
-        </div>
-
-        <!-- Box 3 -->
-        <div class="box">
-          <img
-            src="/src/img/deep/sble.png"
-            alt="marketing thedeep section 2-3"
-            style="width: 100%"
-          />
-        </div>
-
-        <!-- Box 4 -->
-        <div class="box">
-          <img
-            src="/src/img/deep/knowledge.png"
-            alt="marketing thedeep section 2-4"
-            style="width: 100%"
-          />
-        </div>
-      </div>
-    </section>
-
-    <section class="padding" style="background-color: #e7faef">
-      <div class="title-box container">
-        <p
-          class="p22"
-          style="letter-spacing: -0.5px; font-weight: 500; margin-bottom: 40px"
-        >
-          PROCESS
-        </p>
-        <p
-          class="p36"
-          style="
-            line-height: 21px;
-            letter-spacing: -0.5px;
-            font-weight: 600;
-            color: #03c95b;
-          "
-        >
-          진행 과정
-        </p>
-      </div>
-
-      <div class="container">
-        <div class="process-box">
-          <p class="p24" style="color: #03c95b; font-weight: 800">01</p>
-          <p class="p20">상담문의</p>
-          <p class="p16">원하는 방식과 키워드를 알려주세요</p>
-        </div>
-        <div class="process-box">
-          <p class="p24" style="color: #03c95b; font-weight: 800">02</p>
-          <p class="p20">견적 안내</p>
-          <p class="p16">견적 및 가능 여부 안내</p>
-        </div>
-        <div class="process-box">
-          <p class="p24" style="color: #03c95b; font-weight: 800">03</p>
-          <p class="p20">결제 및 자료</p>
-          <p class="p16">사진과 원고 가이드 보내주세요</p>
-        </div>
-        <div class="process-box">
-          <p class="p24" style="color: #03c95b; font-weight: 800">04</p>
-          <p class="p20">원고작성</p>
-          <p class="p16">상위 노출 로직에 맞는 원고 작성</p>
-        </div>
-        <div class="process-box">
-          <p class="p24" style="color: #03c95b; font-weight: 800">05</p>
-          <p class="p20">수정요청</p>
-          <p class="p16">작성 완료된 원고를 확인하세요</p>
-        </div>
-        <div class="process-box">
-          <p class="p24" style="color: #03c95b; font-weight: 800">06</p>
-          <p class="p20">발행</p>
-          <p class="p16">최종 컨펌 후<br />포스팅 집행</p>
-        </div>
-      </div>
-    </section>
+    
 
     <section id="main_footer">
       <div id="main_footer_div" class="padding">
