--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -73,28 +73,28 @@
 
     
 
-    <section id="main_footer">
+   <section id="main_footer">
       <div id="main_footer_div" class="padding">
         <div>
           <p
             class="p36"
             style="color: white; font-weight: 600; margin-bottom: 40px"
           >
-            문의하지 마세요
+            고객센터
           </p>
           <p
             class="p22"
             style="color: white; font-weight: 500; line-height: 35px"
           >
-            최대한 이곳의 정보를 다 둘러보시고<br /><span
+            천안시 서북구 두정중7길 1-12<br /><span
               style="text-decoration: underline"
-              >신중히</span
+              >영업시간</span
             >
-            판단해주세요.
+            오전10시~오후8시
           </p>
         </div>
         <div class="button">
-          <a class="p28" href="/src/pages/contact.html">문의하기</a>
+          <a class="p28" href="tel:0507-1496-0568">☎ 0507-1496-0568</a>
         </div>
       </div>
     </section>
