--- a/src/pages/prepaid.html
+++ b/src/pages/prepaid.html
@@ -7,31 +7,31 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://예쁜중고폰.com/src/pages/buy.html"
+      content="https://예쁜중고폰.com/src/pages/prepaid.html"
     />
-    <meta property="og:title" content="중고폰 매입-예쁜중고폰" />
+    <meta property="og:title" content="알뜰폰 선불폰-예쁜중고폰" />
     <meta
       property="og:image"
       content="https://예쁜중고폰.com/src/img/ogimage.png"
     />
     <meta
       property="og:description"
-      content="천안중고폰매입, 최고가 보장, 불필요한 차감 없이 명확한 안내 "
+      content="알뜰폰, 선불폰 주말에도 즉시 개통 가능한 천안 두정동 예쁜중고폰"
     />
     <meta property="og:site_name" content="예쁜중고폰" />
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta name="title" content="중고폰 매입 - 예쁜중고폰" />
+    <meta name="title" content="알뜰폰 선불폰-예쁜중고폰" />
     <meta
       name="description"
-      content="천안중고폰매입, 최고가 보장, 불필요한 차감 없이 명확한 안내"
+      content="알뜰폰, 선불폰 주말에도 즉시 개통 가능한 천안 두정동 예쁜중고폰"
     />
     <meta
       name="keywords"
-      content="천안,중고폰,매입,최고가,예쁜중고폰 "
+      content="천안,선불폰,알뜰폰,개통,데이터,통화,무제한,KT,LG,SKT,앤텔레콤"
     />
-    <title>중고폰 매입 - 예쁜중고폰</title>
+    <title>알뜰폰 선불폰-예쁜중고폰</title>
     <link rel="stylesheet" href="/src/css/styles.css" />
 
     <link rel="icon" href="/src/img/favicon.ico" type="image/x-icon" />
@@ -63,7 +63,7 @@
           padding-bottom: 2px;
         "
       >
-        중고폰 매입
+        알뜰폰 선불폰
       </p>
     </section>
 
@@ -73,28 +73,28 @@
 
     
 
-    <section id="main_footer">
+   <section id="main_footer">
       <div id="main_footer_div" class="padding">
         <div>
           <p
             class="p36"
             style="color: white; font-weight: 600; margin-bottom: 40px"
           >
-            문의하지 마세요
+            고객센터
           </p>
           <p
             class="p22"
             style="color: white; font-weight: 500; line-height: 35px"
           >
-            최대한 이곳의 정보를 다 둘러보시고<br /><span
+            천안시 서북구 두정중7길 1-12<br /><span
               style="text-decoration: underline"
-              >신중히</span
+              >영업시간</span
             >
-            판단해주세요.
+            오전10시~오후8시
           </p>
         </div>
         <div class="button">
-          <a class="p28" href="/src/pages/contact.html">문의하기</a>
+          <a class="p28" href="tel:0507-1496-0568">☎ 0507-1496-0568</a>
         </div>
       </div>
     </section>
