--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -16,7 +16,7 @@
     />
     <meta
       property="og:description"
-      content="천안중고폰매입, 최고가 보장, 불필요한 차감 없이 명확한 안내 "
+      content="천안중고폰매입, 최고가 보장, 불필요한 차감 없이 명확한 안내, 천안 두정동 예쁜중고폰 "
     />
     <meta property="og:site_name" content="예쁜중고폰" />
     <meta property="og:locale" content="ko_KR" />
@@ -25,7 +25,7 @@
     <meta name="title" content="중고폰 매입-예쁜중고폰" />
     <meta
       name="description"
-      content="천안중고폰매입, 최고가 보장, 불필요한 차감 없이 명확한 안내"
+      content="천안중고폰매입, 최고가 보장, 불필요한 차감 없이 명확한 안내, 천안 두정동 예쁜중고폰 "
     />
     <meta
       name="keywords"
