--- a/src/pages/sell.html
+++ b/src/pages/sell.html
@@ -29,7 +29,7 @@
     />
     <meta
       name="keywords"
-      content="천안,두정동,중고폰,판매,최저가,S급,A급,B급,AS,교환,환불"
+      content="천안,두정동,중고폰,판매,최저가,S급,A급,B급,AS,교환,환불,예쁜중고폰"
     />
     <title>중고폰 판매-예쁜중고폰</title>
     <link rel="stylesheet" href="/src/css/styles.css" />
