--- a/src/pages/prepaid.html
+++ b/src/pages/prepaid.html
@@ -29,7 +29,7 @@
     />
     <meta
       name="keywords"
-      content="천안,선불폰,알뜰폰,개통,데이터,통화,무제한,KT,LG,SKT,앤텔레콤"
+      content="천안,선불폰,알뜰폰,개통,데이터,통화,무제한,KT,LG,SKT,앤텔레콤,예쁜중고폰"
     />
     <title>알뜰폰 선불폰-예쁜중고폰</title>
     <link rel="stylesheet" href="/src/css/styles.css" />
