--- a/src/pages/prepaid.html
+++ b/src/pages/prepaid.html
@@ -68,6 +68,41 @@
     </section>
 
 
+     <section class="padding">
+      <div class="title-box container">
+        <p
+          class="p36"
+          style="
+            line-height: 21px;
+            letter-spacing: -0.5px;
+            font-weight: 600;
+            margin-bottom: 40px;
+          "
+        >
+          <span style="color: #f83aaa">알뜰폰 선불폰</span>
+          <span style="color: #000000">요금제 안내</span>
+        </p>
+        <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
+          <span style="color: #000000">주말 개통 가능! 신분증 지참해서 방문해주세요</span>
+        </p>
+      </div>
+
+       <div class="container-two">
+        <!-- Box 2 -->
+        <div>
+          <img
+            src="/src/img/sec1/vsto.png"
+            alt="KT망"
+            style="width: 95%"
+       margin: auto;
+       display: block;
+          />          
+        </div>
+      </div>
+
+
+       
+    </section>
 
 
 
