--- a/src/pages/prepaid.html
+++ b/src/pages/prepaid.html
@@ -87,21 +87,26 @@
         </p>
       </div>
 
-       <div class="container-two">
-        <!-- Box 2 -->
-        <div>
+        <div class="container">
+        <!-- Box 1 -->
+        <div class="box">
           <img
-            src="/src/img/sec1/vsto.png"
-            alt="KT망"
-            style="width: 95%"
-       margin: auto;
-       display: block;
-          />          
+            src="/src/img/prepaid/lgprice.png"
+            alt="알뜰/선불폰 앤텔레콤 LG망 요금제"
+            style="width: 100%"
+          />
         </div>
+
+        <!-- Box 2 -->
+        <div class="box">
+          <img
+            src="/src/img/prepaid/ktprice.png"
+            alt="알뜰/선불폰 앤텔레콤 kt망 요금제"
+            style="width: 100%"
+          />
+        </div>
+
       </div>
-
-
-       
     </section>
 
 
