--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -68,6 +68,58 @@
     </section>
 
 
+ <section class="padding">
+      <div class="title-box container">
+        <p
+          class="p36"
+          style="
+            line-height: 21px;
+            letter-spacing: -0.5px;
+            font-weight: 600;
+            margin-bottom: 40px;
+          "
+        >
+          <span
+            style="
+              color: white;
+              background-color: #f83aaa;
+              padding: 6px 6px 2px 6px;
+              font-weight: 800;
+            "
+            >매입</span
+          >서비스
+        </p>
+        <p
+          class="p22"
+          style="letter-spacing: -0.5px; font-weight: 500; margin-bottom: 40px"
+        >
+           / 인플루언서 블로그에<br />원하시는 글의
+          내용으로 포스팅해드려요.
+        </p>
+        <p class="p22" style="letter-spacing: -0.5px; font-weight: 600">
+          이런분들에게 추천해드려요!
+        </p>
+      </div>
+
+      <div class="container">
+        <div class="radius-text p20">
+          <img src="/src/img/deep/checkbox.png" alt="checkbox1" />
+          <p>액정 파손, LCD/기능 불량 등 상태가 나빠도 매입</p>
+        </div>
+        <div class="radius-text p20">
+          <img src="/src/img/deep/checkbox.png" alt="checkbox1" />
+          <p>가개통, 박스폰, 태블릿, 워치 등 S급 환영</p>
+        </div>
+        <div class="radius-text p20">
+          <img src="/src/img/deep/checkbox.png" alt="checkbox1" />
+          <p>최저 차감, 명확한 안내로 최고가 매입 약속!</p>
+        </div>
+        <div class="radius-text p20">
+          <img src="/src/img/deep/checkbox.png" alt="checkbox1" />
+          <p>기존 폰 팔고 새 폰 구매시 데이터 이동 OK</p>
+        </div>
+      </div>
+    </section>
 
 
 
