--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -93,11 +93,10 @@
           class="p22"
           style="letter-spacing: -0.5px; font-weight: 500; margin-bottom: 40px"
         >
-           / 인플루언서 블로그에<br />원하시는 글의
-          내용으로 포스팅해드려요.
+           예쁜중고폰이 고객님의 중고폰을<br />구매해드리는 서비스에요.
         </p>
         <p class="p22" style="letter-spacing: -0.5px; font-weight: 600">
-          이런분들에게 추천해드려요!
+          아래 항목 확인하세요!
         </p>
       </div>
 
