--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -102,19 +102,19 @@
 
       <div class="container">
         <div class="radius-text p20">
-          <img src="/src/img/deep/checkbox.png" alt="checkbox1" />
+          <img src="/src/img/main/check.png" alt="checkbox1" />
           <p>액정 파손, LCD/기능 불량 등 상태가 나빠도 매입</p>
         </div>
         <div class="radius-text p20">
-          <img src="/src/img/deep/checkbox.png" alt="checkbox1" />
+          <img src="/src/img/main/check.png" alt="checkbox1" />
           <p>가개통, 박스폰, 태블릿, 워치 등 S급 환영</p>
         </div>
         <div class="radius-text p20">
-          <img src="/src/img/deep/checkbox.png" alt="checkbox1" />
+          <img src="/src/img/main/check.png" alt="checkbox1" />
           <p>최저 차감, 명확한 안내로 최고가 매입 약속!</p>
         </div>
         <div class="radius-text p20">
-          <img src="/src/img/deep/checkbox.png" alt="checkbox1" />
+          <img src="/src/img/main/check.png" alt="checkbox1" />
           <p>기존 폰 팔고 새 폰 구매시 데이터 이동 OK</p>
         </div>
       </div>
