--- a/src/pages/sell.html
+++ b/src/pages/sell.html
@@ -68,6 +68,58 @@
     </section>
 
 
+ <section class="padding">
+      <div class="title-box container">
+        <p
+          class="p36"
+          style="
+            line-height: 21px;
+            letter-spacing: -0.5px;
+            font-weight: 600;
+            margin-bottom: 40px;
+          "
+        >
+          <span
+            style="
+              color: white;
+              background-color: #f83aaa;
+              padding: 6px 6px 2px 6px;
+              font-weight: 800;
+            "
+            >판매</span
+          >서비스
+        </p>
+        <p
+          class="p22"
+          style="letter-spacing: -0.5px; font-weight: 500; margin-bottom: 40px"
+        >
+           예쁜중고폰이 다양한 중고폰을<br />판매하고 있어요.
+        </p>
+        <p class="p22" style="letter-spacing: -0.5px; font-weight: 600">
+          아래 항목 확인하세요!
+        </p>
+      </div>
+
+      <div class="container">
+        <div class="radius-text p20">
+          <img src="/src/img/main/check.png" alt="checkbox1" />
+          <p>상태 점검, 소독을 마친 제품만 진열해요</p>
+        </div>
+        <div class="radius-text p20">
+          <img src="/src/img/main/check.png" alt="checkbox1" />
+          <p>사용 목적에 따라서 S급부터 B급까지 다양해요</p>
+        </div>
+        <div class="radius-text p20">
+          <img src="/src/img/main/check.png" alt="checkbox1" />
+          <p>구매하시면 기존 폰의 데이터를 옮겨드려요</p>
+        </div>
+        <div class="radius-text p20">
+          <img src="/src/img/main/check.png" alt="checkbox1" />
+          <p>구매 후 문제 발생시 교환이나 환불 가능해요</p>
+        </div>
+      </div>
+    </section>
+    
 
 
 
