--- a/src/pages/prepaid.html
+++ b/src/pages/prepaid.html
@@ -91,7 +91,7 @@
         <!-- Box 1 -->
         <div class="box">
           <img
-            src="/src/img/prepaid/lgprice.png"
+            src="/src/img/prepaid/lgprice.jpg"
             alt="알뜰/선불폰 앤텔레콤 LG망 요금제"
             style="width: 100%"
           />
@@ -100,7 +100,7 @@
         <!-- Box 2 -->
         <div class="box">
           <img
-            src="/src/img/prepaid/ktprice.png"
+            src="/src/img/prepaid/ktprice.jpg"
             alt="알뜰/선불폰 앤텔레콤 kt망 요금제"
             style="width: 100%"
           />
