--- a/src/pages/sell.html
+++ b/src/pages/sell.html
@@ -106,7 +106,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           class="p22"
           style="letter-spacing: -0.5px; font-weight: 500; margin-bottom: 40px"
         >
-           예쁜중고폰이 다양한 중고폰을<br />판매하고 있어요.
+           예쁜중고폰이 다양한 중고폰을<br />준비해서 판매하고 있어요.
         </p>
         <p class="p22" style="letter-spacing: -0.5px; font-weight: 600">
           아래 항목 확인하세요!
