--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -118,11 +118,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="container">
         <div class="radius-text p20">
           <img src="/src/img/main/check.png" alt="checkbox1" />
-          <p>액정 파손, LCD/기능 불량 등 상태가 나빠도 매입</p>
+          <p>액정 파손, LCD/기능 불량 등 상태가 나빠도 OK</p>
         </div>
         <div class="radius-text p20">
           <img src="/src/img/main/check.png" alt="checkbox1" />
-          <p>가개통, 박스폰, 태블릿, 워치 등 S급 환영</p>
+          <p>가개통, 박스폰, 미개봉 태블릿/워치 매입</p>
         </div>
         <div class="radius-text p20">
           <img src="/src/img/main/check.png" alt="checkbox1" />
