--- a/index.html
+++ b/index.html
@@ -502,8 +502,8 @@
           text.style.color = "";
         });
     
-        mobileLogo.src = "./../img/callbutton_white.png";
-        mobileMenu.src = "./../img/menu_white.png";
+        mobileLogo.src = "./src/img/callbutton_white.png";
+        mobileMenu.src = "./src/img/menu_white.png";
       }
     });
     
