--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       href="https://webfontworld.github.io/SCoreDream/SCoreDream.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="/src/js/jquery.min.js"></script>
   </head>
   <body>
@@ -146,7 +147,7 @@
                   margin-right: 12px;
                 ">
                 <a>
-                    <font> <i style="font-size: 12px;" class="fas fa-phone-alt"></i> 0507-1496-0568 </font>
+                  <font> <i style="font-size: 12px;" class="fas fa-phone-alt"></i> 0507-1496-0568 </font>
                 </a>
               </li>
             </ul>
