--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -136,6 +136,48 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </section>
 
 
+  <section id="gray-bg" class="padding">
+
+     <div class="title-box container">
+        <p
+          class="p36"
+          style="
+            line-height: 21px;
+            letter-spacing: -0.5px;
+            font-weight: 600;
+            margin-bottom: 40px;
+          "
+        >
+          <span style="color: #f83aaa">예쁜중고폰</span>
+          <span style="color: #000000">많은 거래처가 있는 곳</span>
+        </p>
+        <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
+          <span style="color: #000000">직접 만져보고 비교 후 구매하세요</span>
+        </p>
+      </div>
+
+
+     <div class="container">
+        <!-- Box 1 -->
+        <div class="box">
+          <img
+            src="/src/img/sec1/pan1.png"
+            alt="예쁜중고폰 매입 사진1"
+            style="width: 100%"
+          />
+        </div>
+
+        <!-- Box 2 -->
+        <div class="box">
+          <img
+            src="/src/img/sec1/pan2.png"
+            alt="예쁜중고폰 매입 사진2"
+            style="width: 100%"
+          />
+        </div>
+
+      </div>
+    </section>
 
     
 
