--- a/src/pages/sell.html
+++ b/src/pages/sell.html
@@ -134,8 +134,95 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </section>
     
 
+  <section id="gray-bg" class="padding">
+
+     <div class="title-box container">
+        <p
+          class="p36"
+          style="
+            line-height: 21px;
+            letter-spacing: -0.5px;
+            font-weight: 600;
+            margin-bottom: 40px;
+          "
+        >
+          <span style="color: #f83aaa">예쁜중고폰</span>
+          <span style="color: #000000">다양한 기종 보유</span>
+        </p>
+        <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
+          <span style="color: #000000">직접 만져보고 비교 후 구매하세요</span>
+        </p>
+      </div>
 
 
+     <div class="container">
+        <!-- Box 1 -->
+        <div class="box">
+          <img
+            src="/src/img/sec1/show1.png"
+            alt="예쁜중고폰 판매 상품 진열 쇼케이스 사진1"
+            style="width: 100%"
+          />
+        </div>
+
+        <!-- Box 2 -->
+        <div class="box">
+          <img
+            src="/src/img/sec1/show2.png"
+            alt="예쁜중고폰 판매 상품 진열 쇼케이스 사진2"
+            style="width: 100%"
+          />
+        </div>
+
+      </div>
+    </section>
+
+  <section class="padding">
+      <div class="title-box container">
+        <p
+          class="p36"
+          style="
+            line-height: 21px;
+            letter-spacing: -0.5px;
+            font-weight: 600;
+            margin-bottom: 40px;
+          "
+        >
+          <span style="color: #f83aaa">예쁜중고폰</span>
+          <span style="color: #000000">이용 고객 후기</span>
+        </p>
+        <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
+          <span style="color: #000000">실제로 방문해 이용한 고객들의 리뷰</span>
+        </p>
+      </div>
+
+  <div id="reviews" class="container">
+        <div class="box">
+          <div class="image-container">
+            <img
+              src="/src/img/sec1/review1.png"
+              alt="review1"
+            />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image-container">
+            <img
+              src="/src/img/sec1/review2.png"
+              alt="review2"
+            />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image-container">
+            <img
+              src="/src/img/sec1/review3.png"
+              alt="review3"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
     
 
    <section id="main_footer">
