--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -179,6 +179,53 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     </section>
 
+
+  <section class="padding">
+      <div class="title-box container">
+        <p
+          class="p36"
+          style="
+            line-height: 21px;
+            letter-spacing: -0.5px;
+            font-weight: 600;
+            margin-bottom: 40px;
+          "
+        >
+          <span style="color: #f83aaa">예쁜중고폰</span>
+          <span style="color: #000000">이용 고객 후기</span>
+        </p>
+        <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
+          <span style="color: #000000">실제로 방문해 이용한 고객들의 리뷰</span>
+        </p>
+      </div>
+
+  <div id="reviews" class="container">
+        <div class="box">
+          <div class="image-container">
+            <img
+              src="/src/img/sec1/review1.png"
+              alt="review1"
+            />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image-container">
+            <img
+              src="/src/img/sec1/review2.png"
+              alt="review2"
+            />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image-container">
+            <img
+              src="/src/img/sec1/review3.png"
+              alt="review3"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
     
 
    <section id="main_footer">
