--- a/src/pages/sell.html
+++ b/src/pages/sell.html
@@ -159,7 +159,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- Box 1 -->
         <div class="box">
           <img
-            src="/src/img/sec1/show1.png"
+            src="/src/img/sec1/show1.jpg"
             alt="예쁜중고폰 판매 상품 진열 쇼케이스 사진1"
             style="width: 100%"
           />
@@ -168,7 +168,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- Box 2 -->
         <div class="box">
           <img
-            src="/src/img/sec1/show2.png"
+            src="/src/img/sec1/show2.jpg"
             alt="예쁜중고폰 판매 상품 진열 쇼케이스 사진2"
             style="width: 100%"
           />
