--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -161,7 +161,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- Box 1 -->
         <div class="box">
           <img
-            src="/src/img/sec1/pan1.png"
+            src="/src/img/sec1/pan1.jpg"
             alt="예쁜중고폰 매입 사진1"
             style="width: 100%"
           />
@@ -170,7 +170,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- Box 2 -->
         <div class="box">
           <img
-            src="/src/img/sec1/pan2.png"
+            src="/src/img/sec1/pan2.jpg"
             alt="예쁜중고폰 매입 사진2"
             style="width: 100%"
           />
