--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -136,7 +136,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </section>
 
 
-  <section id="gray-bg" class="padding">
+  <section class="padding" style="background-color: #ededed">
 
      <div class="title-box container">
         <p
