--- a/src/pages/sell.html
+++ b/src/pages/sell.html
@@ -132,10 +132,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </div>
     </section>
+
     
 
-  <section id="gray-bg" class="padding">
-
+   <section class="padding" style="background-color: #ededed">
+     
      <div class="title-box container">
         <p
           class="p36"
@@ -146,8 +147,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             margin-bottom: 40px;
           "
         >
-          <span style="color: #f83aaa">예쁜중고폰</span>
-          <span style="color: #000000">다양한 기종 보유</span>
+          <span style="color: #000000">예쁜중고폰</span>
+          <span style="color: #f83aaa">다양한 기종 보유</span>
         </p>
         <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
           <span style="color: #000000">직접 만져보고 비교 후 구매하세요</span>
