--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -152,7 +152,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <span style="color: #000000">많은 거래처가 있는 곳</span>
         </p>
         <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
-          <span style="color: #000000">직접 만져보고 비교 후 구매하세요</span>
+          <span style="color: #000000">휴대폰 판매점, 대리점 사장님들이 찾아오는 이유</span>
         </p>
       </div>
 
