--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -148,8 +148,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             margin-bottom: 40px;
           "
         >
-          <span style="color: #f83aaa">예쁜중고폰</span>
-          <span style="color: #000000">많은 거래처가 있는 곳</span>
+          <span style="color: #000000">예쁜중고폰</span>
+          <span style="color: #f83aaa">많은 거래처</span><span style="color: #000000">가 있는 곳</span>
         </p>
         <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
           <span style="color: #000000">휴대폰 판매점, 대리점 사장님들이 찾아오는 이유</span>
