--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
     </script>
     <!-- End Google Tag Manager -->
 
+ <span itemscope="" itemtype="http://schema.org/Organization">
+<link itemprop="url" href="https://예쁜중고폰.com">
+<a itemprop="sameAs" href="https://blog.naver.com/prettyphone93"></a>
+<a itemprop="sameAs" href="https://talk.naver.com/ct/w5t762"></a>
+</span>
+    
+
     <title>천안중고폰 | 예쁜중고폰</title>
     <link rel="stylesheet" href="/src/css/styles.css" />
     <link rel="stylesheet" href="/src/css/index.css" />
