--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                   margin-right: 12px;
                 ">
                 <a>
-                  <font> <i style="font-size: 16px;" class="fas fa-phone-alt"></i> 0507-1496-0568 </font>
+                 <img src="/img/pc-phone.png" /><font> 0507-1496-0568 </font>
                 </a>
               </li>
             </ul>
