--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                   margin-right: 12px;
                 ">
                 <a>
-                 <img src="/img/pc-phone.png" /><font> 0507-1496-0568 </font>
+                 <img src="/img/pc_phone.png" /><font> 0507-1496-0568 </font>
                 </a>
               </li>
             </ul>
